Added aliases for operators. AND: *, & and AND. OR: +, | or OR. XOR: ^, !=, XOR. NOT: !, NOT.

--- a/no.tiwas.booleantoolbox/locales/nb.json
+++ b/no.tiwas.booleantoolbox/locales/nb.json
@@ -20,7 +20,7 @@
         "operators": {
             "and": "AND (*)",
             "or": "OR (+)",
-            "xor": "XOR (⊕)"
+            "xor": "XOR (^)"
         }
     }
 }
